--- a/README
+++ b/README
@@ -1,4 +1,16 @@
 All the tools I use for creating my little weather page here:
 http://wx.slackology.net/test/plots/wx.html
 
-This is very much a work in progress.
+also see http://slackology.net/wxnotes.html for more info
+
+In theory, if wanted wanted to run this themselves, they could change the OVER_DIR variable, and some of the upload paths, and be off to a good start
+
+This is very much a work in progress, and is part of an ongoing project to tinker together a weather station from a raspberry pi.
+
+The sensor data can sometimes be noisey, this combined with some of the things that happen to the linux file system on the raspberry pi necessitated the very strict pattern matching observed toward the top of wx.go
+
+As the data strings begin with the date, patterns search for strings that start with 2, in the hopes that i have sth better figured out before the year 2999. The history of computer science suggets that I will not.
+
+The sht11 will display humidity over 100%, and sometimes does so when there's a lot of fog and mist around, so the patterns were updated to reflect this.
+
+My internet connection REALLY sucks atm, so we eat the output of rsync and added some switches to deal with that.
