--- a/README
+++ b/README
@@ -20,3 +20,5 @@ As the data strings begin with the date, patterns search for strings that start 
 
 The Air Quality readings are currently raw data from the bme680, the datasheet for which can be found here:
 https://ae-bst.resource.bosch.com/media/_tech/media/datasheets/BST-BME680-DS001-00.pdf
+
+The temperature is reading kinda high at the moment, cuz the sensor is in an enclosure with the raspberry pi w, and heating effects are noticable.
