--- a/README
+++ b/README
@@ -1,24 +1,29 @@
 All the tools I use for creating my little weather page here:
-http://wx.slackology.net/test/plots/wx.html
+https://wx1.slackology.net/plots/wx.html
 
-also see http://slackology.net/wxnotes.html for more info
+In theory, if one wanted to run this themselves, they could change the OVER_DIR
+variable, and some of the upload paths, and be off to a good start
 
-In theory, if one wanted to run this themselves, they could change the OVER_DIR variable, and some of the upload paths, and be off to a good start
+This is part of an ongoing project to tinker together a weather station from a
+raspberry pi.
 
-This is very much a work in progress, and is part of an ongoing project to tinker together a weather station from a raspberry pi.
+The sensor data can sometimes be noisy, this combined with some of the things
+that happen to the linux file system on the raspberry pi necessitated the very
+strict pattern matching observed toward the top of wx.go.
 
-The sensor data can sometimes be noisy, this combined with some of the things that happen to the linux file system on the raspberry pi necessitated the very strict pattern matching observed toward the top of wx.go
-
-As the data strings begin with the date, patterns search for strings that start with 2, in the hopes that i have sth better figured out before the year 2999. The history of computer science suggests that I will not.
+As the data strings begin with the date, patterns search for strings that start
+with 2, in the hopes that i have sth better figured out before the year 2999.
+The history of computer science suggests that I will not.
 
 * A number of directories need to be created. Inside of $OVER_DIR, do:
-	mkdir data plots particle/data particle/plots
+	mkdir data plots particle/data/$YEAR particle/plots
+	+ Where $YEAR is the 4 digit year.
+	+ I use a cronjob to generate a new $YEAR dir every new year at midnight.
 
-* The i2c bus needs to be enabled.
-	prly easiest to use sth like raspi-config and enable it there.
-	make sure your user is in the i2c and gpio groups
 
-The Air Quality readings are currently raw data from the bme680, the datasheet for which can be found here:
+* The i2c bus needs to be enabled.  This is probably most easily done with
+  raspi-config.  Make sure your user is in the i2c and gpio groups
+
+The Air Quality readings are currently raw data from the bme680, the datasheet
+for which can be found here:
 https://ae-bst.resource.bosch.com/media/_tech/media/datasheets/BST-BME680-DS001-00.pdf
-
-The temperature is reading kinda high at the moment, cuz the sensor is in an enclosure with the raspberry pi w, and heating effects are noticable.
