--- a/README
+++ b/README
@@ -12,14 +12,13 @@ that happen to the linux file system on the raspberry pi necessitated the very
 strict pattern matching observed toward the top of wx.go.
 
 As the data strings begin with the date, patterns search for strings that start
-with 2, in the hopes that i have sth better figured out before the year 2999.
+with 2, in the hopes that I have something better figured out before the year 2999.
 The history of computer science suggests that I will not.
 
 * A number of directories need to be created. Inside of $OVER_DIR, do:
 	mkdir data plots particle/data/$YEAR particle/plots
 	+ Where $YEAR is the 4 digit year.
 	+ I use a cronjob to generate a new $YEAR dir every new year at midnight.
-
 
 * The i2c bus needs to be enabled.  This is probably most easily done with
   raspi-config.  Make sure your user is in the i2c and gpio groups
